removingthe cachce and downloader to bad spot.s

--- a/vignettes/cifti_work.Rmd
+++ b/vignettes/cifti_work.Rmd
@@ -13,7 +13,7 @@ vignette: >
 ```{r setup, include=FALSE}
 library(cifti)
 knitr::opts_chunk$set(
-  echo = TRUE, cache = TRUE, comment = "")
+  echo = TRUE, cache = FALSE, comment = "")
 ```
 
 
