added in new badges

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,12 +17,9 @@ knitr::opts_chunk$set(
 
 This is a Toolbox for Connectivity Informatics Technology Initiative ('CIFTI') Files
     
-[![Travis-CI Build Status](https://travis-ci.org/muschellij2/cifti.svg?branch=master)](https://travis-ci.org/muschellij2/cifti)
-
-[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/muschellij2/cifti?branch=master&svg=true)](https://ci.appveyor.com/project/muschellij2/cifti)
-
-[![Coverage Status](https://img.shields.io/coveralls/muschellij2/cifti.svg)](https://coveralls.io/r/muschellij2/cifti?branch=master)
-
+<!-- badges: start -->
+[![R-CMD-check](https://github.com/muschellij2/cifti/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/muschellij2/cifti/actions/workflows/R-CMD-check.yaml)
+<!-- badges: end -->
 
 ## Installation
 
