--- a/vignettes/test_dims_MSC.Rmd
+++ b/vignettes/test_dims_MSC.Rmd
@@ -29,17 +29,18 @@ mscfile = file.path(
   install_dir, 
   "sub-MSC01_ses-func01_task-rest_bold_32k_fsLR.dtseries.nii")
 if (!file.exists(mscfile)) {
-  url = paste0(
-    "https://openneuro.org/crn/datasets/ds000224/snapshots/00002/files/", 
-    "derivatives:", "surface_pipeline:", "sub-MSC01:",
-    "processed_restingstate_timecourses:",  "ses-func01:cifti:",
-    "sub-MSC01_ses-func01_task-rest_bold_32k_fsLR.dtseries.nii")
+  # url = paste0(
+  #   "https://openneuro.org/crn/datasets/ds000224/snapshots/00002/files/", 
+  #   "derivatives:", "surface_pipeline:", "sub-MSC01:",
+  #   "processed_restingstate_timecourses:",  "ses-func01:cifti:",
+  #   "sub-MSC01_ses-func01_task-rest_bold_32k_fsLR.dtseries.nii")
   url = paste0("https://s3.amazonaws.com/openneuro/ds000224/ds000224_R1.0.2/",
                "uncompressed/derivatives/surface_pipeline/sub-MSC01/", 
                "processed_restingstate_timecourses/ses-func01/cifti/", 
                "sub-MSC01_ses-func01_task-rest_bold_32k_fsLR.dtseries.nii")
   res = download.file(url = url, 
-    destfile = mscfile)
+    destfile = mscfile, mode = "wb")
+  stopifnot(file.exists(mscfile))
 }
 ```
 
